force-app/main/default/objects/SMS_Response__c/SMS_Response__c.object-meta.xml
<CustomObject>
    <label>SMS Response</label>
    <nameField>
        <displayFormat>SMS-{000000}</displayFormat>
        <label>SMS Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>