force-app/main/default/objects/SMS_Response__c/fields/destino__c.field-meta.xml
<CustomField>
    <fullName>destino__c</fullName>
    <label>destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>