force-app/main/default/objects/SMS_Response__c/fields/fecha__c.field-meta.xml
<CustomField>
    <fullName>fecha__c</fullName>
    <label>fecha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>