force-app/main/default/objects/SMS_Response__c/fields/mensaje__c.field-meta.xml
<CustomField>
    <fullName>mensaje__c</fullName>
    <label>mensaje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>