force-app/main/default/objects/SMS_Response__c/fields/origenRotativo__c.field-meta.xml
<CustomField>
    <fullName>origenRotativo__c</fullName>
    <label>origenRotativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>