force-app/main/default/objects/SMS_Response__c/fields/source_addr_npi__c.field-meta.xml
<CustomField>
    <fullName>source_addr_npi__c</fullName>
    <label>source_addr_npi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>