force-app/main/default/objects/SMS_Response__c/fields/source_addr_ton__c.field-meta.xml
<CustomField>
    <fullName>source_addr_ton__c</fullName>
    <label>source_addr_ton</label>
    <length>255</length>
    <type>Text</type>
</CustomField>