force-app/main/default/objects/SMS_Response__c/fields/telco__c.field-meta.xml
<CustomField>
    <fullName>telco__c</fullName>
    <label>telco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>