force-app/main/default/objects/SMS_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>destino__c</columns>
    <columns>fecha__c</columns>
    <columns>mensaje__c</columns>
    <columns>origen__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>